2003-01-20	blytkerchan
	* index.html: roll back to revision 1.10
	remove alignment from SF logo

	* poll.css: new style for result_table_title
	* poll_db.pl: remove trailing semicolon from table declaration
	* poll_response.pl: kill warning about uninitialized variable 
	* poll_result.pl: implement

2003-01-10	blytkerchan
	* poll_db.pl: new file
	* poll_result.pl: ditto
	* poll_http.pl: ditto
	* poll.pl: move all database-related functions and globals to poll_db.pl
	move the header and footer functions to poll_http.pl
	* poll_response.pl: ditto

	* jailust.answers.sql: normalize
	* jailust.examples.sql: ditto
	* jailust.questions.sql: ditto
	* poll.pl: put the question_id in the form
	* poll_response.pl: save the response to the database

2003-01-08	blytkerchan
	* poll.pl: re-introduce PROGID

	* poll.pl: give comment a name in stead of an id

	* index.html: let poll iframe have full height

	* jailust.questions.sql: fix syntax error

	* jailust.answers.sql: use checkbox in stead of radio
	* jailust.questions.sql: make question commentable

	* poll.pl: set names on radio buttons & check boxes.

	* poll.pl: set width of poll form to 200 pixels
	* index.html: integrate poll.pl in an iframe under the SF logo
	* poll_response.pl: repair experimental version

	* poll.pl: rename base_url to response_url

2003-01-07	blytkerchan
	* poll_response.pl: new experimental implementation..

	* jailust.questions.sql: add ask_email field
	* poll_response.pl: new file

	* poll.pl: update config settings
	update URL of stylesheet
	repair support of examples
	* jailust.answers.sql: add some data
	
	* jailust.answers.sql: new file
	* poll.pl: take answers into account
	* jailust.questions.sql: make `examples' and `answers' more obviously boolean
	let the second question have answers

	* jailust.examples.sql: name the table properly
	fix the size of the example (make it TEXT in stead of VARCHAR)
