@@ -6,6 +6,8 @@
 "text/html; charset=us-ascii">
 </head>
 <body>
+<link href="jail.css" rel=stylesheet type="text/css"/>
+<a name="top"/>
 <div align="center"><img src="jail-banner.png" alt=
 "Just Another Interpreted Language">
 </div>
@@ -19,7 +21,7 @@
 </td>
 <td valign="top">
 <div align="justify">
-<h2>Development</h2>
+<h1>Development</h1>
 <p>Development on the Jail preprocessor has started on Oct 1st 2003, with the
 creation of the jail-ust-devel discussion group and the upload of the coding
 standards I (rlc) use for most of my projects (which is a set of amendmends on
@@ -29,7 +31,7 @@ make it readible by the compiler itself. The preprocessor will need several
 libraries and (other) components that will be used by the other programs in
 the Jail Interpreter Suite (compiler, linker, VM) as well. The first goals
 will entail making those libraries/components.</p>
-<h3>The Development Plan</h3>
+<h2>The Development Plan</h2>
 <p>The first thing that will be implemented is a library of data containers,
 derived from a library (libhash) I have previously developed. The original
 libhash is not thread-safe but should be made so. It should also be extended
@@ -53,7 +55,6 @@ might, if needed, allow access to external databases.</p>
 part depends on, and work on it to get a minimal working implementation so we
 can get started on other parts. The container library is such a part, so 
 development on it is active. The memory manager is another such part.</p>
-<h3></h3>
 
 
 <!-- PUT THIS IS LICENSING.HTML
@@ -79,6 +80,7 @@ width="210" height="62" border="0" align="right" alt=
 </tr>
 </tbody>
 </table>
-<div align="right">This page was last updated: $Date: 2003/12/09 19:51:41 $</div>
+<div style="text-align: right; font-size: smaller;"<a href="#top">back to top</a></div>
+<div align="right">This page was last updated: $Date: 2004/01/21 17:07:04 $</div>
 </body>
 </html>
