@@ -6,6 +6,8 @@
 "text/html; charset=us-ascii">
 </head>
 <body>
+<link href="jail.css" rel=stylesheet type="text/css"/>
+<a name="top"/>
 <div align="center"><img src="jail-banner.png" alt=
 "Just Another Interpreted Language">
 </div>
@@ -19,7 +21,7 @@
 </td>
 <td valign="top">
 <div align="justify">
-<h2><a name="Goals"></a>Goals</h2>
+<h1><a name="Goals"></a>Goals</h1>
 <p>The goals of the Jail project are:</p>
 <ul>
 <li>To make a very portable interpreted language, that will run on
@@ -77,6 +79,7 @@ width="210" height="62" border="0" align="right" alt=
 </tr>
 </tbody>
 </table>
-<div align="right">This page was last updated: $Date: 2003/09/21 16:29:39 $</div>
+<div style="text-align: right; font-size: smaller;"<a href="#top">back to top</a></div>
+<div align="right">This page was last updated: $Date: 2004/01/21 17:07:04 $</div>
 </body>
 </html>
