@@ -6,6 +6,8 @@
 "text/html; charset=us-ascii">
 </head>
 <body>
+<link href="jail.css" rel=stylesheet type="text/css"/>
+<a name="top"/>
 <div align="center"><img src="jail-banner.png" alt=
 "Just Another Interpreted Language">
 </div>
@@ -19,7 +21,7 @@
 </td>
 <td valign="top">
 <div align="justify">
-<h2><a name="How_you_can_help"></a>How you can help</h2>
+<h1><a name="How_you_can_help"></a>How you can help</h1>
 <p>The language (Jail) and the programs that implement it are a
 work in progress. We need</p>
 <ul>
@@ -67,6 +69,7 @@ width="210" height="62" border="0" align="right" alt=
 </tr>
 </tbody>
 </table>
-<div align="right">This page was last updated: $Date: 2003/10/01 12:43:47 $</div>
+<div style="text-align: right; font-size: smaller;"<a href="#top">back to top</a></div>
+<div align="right">This page was last updated: $Date: 2004/01/21 17:07:04 $</div>
 </body>
 </html>
