@@ -6,6 +6,8 @@
 "text/html; charset=us-ascii">
 </head>
 <body>
+<link href="jail.css" rel=stylesheet type="text/css"/>
+<a name="top"/>
 <div align="center"><img src="jail-banner.png" alt=
 "Just Another Interpreted Language">
 </div>
@@ -52,6 +54,7 @@ width="210" height="62" border="0" alt=
 </tr>
 </tbody>
 </table>
-<div align="right">This page was last updated: $Date: 2004/01/20 16:54:15 $</div>
+<div style="text-align: right; font-size: smaller;"<a href="#top">back to top</a></div>
+<div align="right">This page was last updated: $Date: 2004/01/21 17:07:04 $</div>
 </body>
 </html>
