@@ -1,0 +1,38 @@
+h1,h2,h3 {
+	color: #0000FF;
+	font-weight: bold;
+	background: #FFFF80;
+}
+h1 {
+	font-size: x-large;
+}
+h2 {
+	font-size: large;
+}
+
+#summary {
+	font-style: italic;
+	width: 80%;
+	padding-left: 10%;
+}
+
+table.intext {
+	border: thin groove black;
+}
+tr.title {
+	color: #0000FF;
+	background: #FFFFF0;
+	text-align: center;
+	border-bottom: thin solid black;
+}
+td {
+	vertical-align: top;
+}
+td.subject {
+	background: #FFFFF8;
+	text-align: center;
+}
+code {
+	font-family: monospace;
+}
+
