@@ -1,0 +1,63 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+<title>JAIL: Just Another Interpreted Language</title>
+<meta http-equiv="content-type" content=
+"text/html; charset=us-ascii">
+</head>
+<body>
+<link href="jail.css" rel=stylesheet type="text/css"/>
+<a name="top"/>
+<div align="center"><img src="jail-banner.png" alt=
+"Just Another Interpreted Language">
+</div>
+<table style="width: 100%"> 
+<tbody>
+<tr>
+<td style="width: 20%;" valign="top">
+<iframe src="table.html" type="text/html" width="100%" height="800" frameborder=0>
+<p>The TOC should be here..</p>
+</iframe>
+</td>
+<td valign="top">
+<div align="justify">
+<h1>Jail operators and precedence</h1>
+<p id="summary">The operators of the Jail language supports all the standard mathematical
+operators according to their &quot;usual&quot; precedence and with their most
+&quot;natural&quot; meaning.</p>
+<p>The different operators of the Jail language are given in the table below.
+They are listed in order of precedence, the &quot;strongest&quot; operator 
+first. The strength of the operator is defined by primary school logic</p>
+<table width="100%" class="intext">
+<tbody>
+<tr class="title"><td>Operator</td><td>Description</td></tr>
+<tr><td class="subject">^</td><td>Power operator: raise the left operand to the power of the 
+right operand and return the result.<br/>
+This operator calls the <code>power</code> function on the left operand, with
+the integer value of the right operand as it's argument.
+</td></tr>
+<tr><td class="subject">*</td><td></td></tr>
+<tr><td class="subject">/</td><td></td></tr>
+<tr><td class="subject">+</td><td></td></tr>
+<tr><td class="subject">-</td><td></td></tr>
+<!-- 
+<tr><td class="subject"></td><td></td></tr>
+-->
+</tbody>
+</table>
+</div>
+</td>
+<td width="210" valign="top">
+<a href=
+"http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=85312&amp;type=5"
+width="210" height="62" border="0" align="right" alt=
+"SourceForge.net Logo"></a>
+</td>
+</tr>
+</tbody>
+</table>
+<div style="text-align: right; font-size: smaller;"<a href="#top">back to top</a></div>
+<div align="right">This page was last updated: $Date: 2004/01/21 17:07:04 $</div>
+</body>
+</html>
