@@ -6,6 +6,8 @@
 "text/html; charset=us-ascii">
 </head>
 <body>
+<link href="jail.css" rel=stylesheet type="text/css"/>
+<a name="top"/>
 <div align="center"><img src="jail-banner.png" alt=
 "Just Another Interpreted Language">
 </div>
@@ -19,6 +21,7 @@
 </td>
 <td valign="top">
 <div align="justify">
+<h1>Current discussions on defining the language</h1>
 <p>
 This page will describe the different features of the language as defined on 
 <a href="http://sourceforge.net/mailarchive/forum.php?forum_id=34463">the jail-ust-lang list</a>.<br/>
@@ -63,6 +66,7 @@ interpreter should warn the programmer about that, but that's
 another question: if the programmer decides to multiply a file,
 he'll get a multiplied file.. It's just a question of deciding on
 the semantics of the operation and the operation can be done.</p>
+<div style="text-align: right; font-size: smaller;"<a href="#top">back to top</a></div>
 <a name="tag004"/>
 <h2>Grammar and syntax</h2>
 <p>The grammar of Jail is under development. Basically, what we
@@ -113,6 +117,7 @@ stderr, etc. The complete list of pre-defined symbols and what they
 are for has yet to be defined. Again, if you want to join the
 discussion, please mail to <i>jail-ust-lang-subscribe at lists dot
 sourceforge dot net</i>.</p>
+<div style="text-align: right; font-size: smaller;"<a href="#top">back to top</a></div>
 <a name="tag005">
 <h2>Error and exception handling</h2>
 <p>Anybody who's tried teaching C++ to non-programmers will have
@@ -143,6 +148,7 @@ exceptions, ranging from division-by-zero to access violations. For
 this, the JailVM will use user-provided callback functions, which
 will be called in a similar way to signal handlers. These can
 either be written in Jail or in some other language.</p>
+<div style="text-align: right; font-size: smaller;"<a href="#top">back to top</a></div>
 <a name="tag001"/>
 <h2>"Everything is an item" (2)</h2>
 <p>IMHO, the following text (taken from jail-ust-lang) is very clear on the
@@ -212,6 +218,7 @@ Any of these functions can be overridden.<br/>
 </i>
 <div align="right">From a mail to jail-ust-lang on <a href="http://sourceforge.net/mailarchive/forum.php?forum_id=34463&max_rows=25&style=flat&viewmonth=200308&viewday=18">Tue Aug 19 15:10:02 2003</a></div>
 </p>
+<div style="text-align: right; font-size: smaller;"<a href="#top">back to top</a></div>
 <a name="tag002"/>
 <h2>"Soft typing: new keywords, inheritance, etc."</h2>
 <p>
@@ -292,6 +299,7 @@ operator:
 </pre>
 <div align="right">From a mail to jail-ust-lang on <a href="http://sourceforge.net/mailarchive/forum.php?forum_id=34463&max_rows=25&style=flat&viewmonth=200309&viewday=1">Tue Sep  2 13:38:24 2003</a></div>
 </p>
+<div style="text-align: right; font-size: smaller;"<a href="#top">back to top</a></div>
 
 
 <!-- PUT YOUR TEXT HERE -->
@@ -313,6 +321,7 @@ width="210" height="62" border="0" align="right" alt=
 </tr>
 </tbody>
 </table>
-<div align="right">This page was last updated: $Date: 2003/12/09 19:51:41 $</div>
+<div style="text-align: right; font-size: smaller;"<a href="#top">back to top</a></div>
+<div align="right">This page was last updated: $Date: 2004/01/21 17:07:04 $</div>
 </body>
 </html>
