@@ -6,6 +6,8 @@
 "text/html; charset=us-ascii">
 </head>
 <body>
+<link href="jail.css" rel=stylesheet type="text/css"/>
+<a name="top"/>
 <table align="left" border="1" cellspacing="0" cellpadding="8"
 bgcolor="#EDEDED" style="width: 100%;">
 <tbody>
@@ -15,17 +17,20 @@ bgcolor="#EDEDED" style="width: 100%;">
 <tbody>
 <tr>
 <td valign="middle"><a href=
-"index.html" target="_top">Welcome</a><br></td>
+"index.html" target="_top">Welcome</a></td>
 </tr>
 <tr>
-<td valign="top"><a href="goals.html" target="_top">Goals</a><br></td>
+<td valign="top"><a href="goals.html" target="_top">Goals</a></td>
 </tr>
 <tr>
 <td valign="top"><a href="how_you_can_help.html" target="_top">How you can
-help</a><br></td>
+help</a></td>
 </tr>
 <tr>
-<td valign="top"><a href="language.html" target="_top">The Language</a><br></td>
+<td valign="top"><a href="language.html" target="_top">The Language</a></td>
+</tr>
+<tr>
+<td valign="top"><a href="jailop.html" target="_top">Operators and precedence</a></td>
 </tr>
 <tr>
 <td valign="top"><a href="design.html" target="_top">Designing the Language</a></td>
